# Aethorac2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  a.json  partitions.csv  rs485.py  rs485_oracle.py  sdkconfig  sdkconfig.old
components/action_group/: CMakeLists.txt  action_group.cpp  action_group.h
components/air_conditioner/: CMakeLists.txt  air_conditioner.cpp  air_conditioner.h
components/bgm/: CMakeLists.txt  bgm.cpp  bgm.h
components/board_output/: CMakeLists.txt  board_output.cpp  board_output.h
components/channel_input/: CMakelists.txt  channel_input.cpp  channel_input.h
components/commons/: CMakeLists.txt  commons.cpp  commons.h
components/curtain/: CMakeLists.txt  curtain.cpp  curtain.h
components/drycontact_out/: CMakeLists.txt  drycontact_out.cpp  drycontact_out.h
components/enums/: enums.h
components/identity/: CMakelists.txt  identity.cpp  identity.h
components/idevice/: CMakeLists.txt  idevice.cpp  idevice.h
components/iinput/: CMakelists.txt  iinput.h
components/indicator/: CMakeLists.txt  indicator.cpp  indicator.h
components/json_codec/: CMakelists.txt  json_codec.cpp  json_codec.h
components/lamp/: CMakeLists.txt  lamp.cpp  lamp.h
components/lord_manager/: CMakelists.txt  lord_manager.cpp  lord_manager.h
components/manager_base/: CMakeLists.txt  manager_base.cpp  manager_base.h
components/my_mqtt/: CMakeLists.txt  mqtt_secrets.h.tmpl  my_mqtt.cpp  my_mqtt.h
components/network/: CMakeLists.txt  network.cpp  network.h
components/panel_input/: CMakeLists.txt  panel_input.cpp  (+1 more)
main/: CMakeLists.txt  main.cpp
(+90 files in other folders)
